<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/client_transaction_empty"
        style="@style/emptyLayoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_payment_history_is_empty"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/client_transaction_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="start"
                android:text="@string/Begin"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/client_transaction_begin"
                android:textColor="#000"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/End"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/client_transaction_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:focusable="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/client_transaction_ok_button"
                android:text="@string/menu_action_search"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal"
            android:padding="@dimen/base_margin"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:gravity="start"
                android:text="@string/Date"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.30"
                android:gravity="start"
                android:text="@string/Reference"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="start"
                android:text="@string/Description"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="end"
                android:text="@string/Amount"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/client_transaction_history_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>