<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="#2c3e50"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CheckNumber"
            android:padding="25sp"
            android:textColor="#FFF"
            />
        <EditText
            android:id="@+id/check_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25sp"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bank"
            android:padding="25sp"
            android:textColor="#FFF"
            />
        <Spinner
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25sp"
            android:textColor="#FFF"
            />
        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25sp"
            android:inputType="number"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonPrimaryStyle"
            android:background="@null"
            android:text="@string/Cancel"
            />
        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonPrimaryStyle"
            android:background="@null"
            android:text="@string/Ok"
            />
    </LinearLayout>
</LinearLayout>